# Universal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Code/Include/Universal/Algorithm/Noise/: FloatMap2D.h  PerlinNoiseGenerator2D.h  VectorGrid2D.h
Code/Include/Universal/Configuration/: GlobalSettings.h
Code/Include/Universal/Graphics/: Bitmap.h  Buffer.h  Channel.h  Color.h  ColorPalette.h  GraphicsUtils.h
Code/Include/Universal/Math/: Aabb2D.h  Aabb3D.h  BoundingBox2D.h  Math.h  Matrix2x3f.h  Quaternion.h  Transform.h  Vector2f.h  Vector3f.h
Code/Include/Universal/Math/Matrix/: Matrix2x3f.h  Matrix3x3f.h  Matrix3x4f.h  Matrix4x4f.h
Code/Include/Universal/Math/Random/: Generator.h  RandomUtils.h
Code/Include/Universal/Math/Vector/: Vector2f.h  Vector3f.h  Vector4f.h
Code/Include/Universal/Profiling/: TimeRegistry.h  Timer.h
Code/Include/Universal/System/: Clock.h  TypeSafeId.h
Code/Source/Universal/Algorithm/Noise/: FloatMap2D.cpp  PerlinNoiseGenerator2D.cpp  VectorGrid2D.cpp
Code/Source/Universal/Graphics/: Bitmap.cpp  Buffer.cpp  Color.cpp  ColorPalette.cpp  GraphicsUtils.cpp
Code/Source/Universal/Math/: Aabb2D.cpp  Aabb3D.cpp  BoundingBox2D.cpp  Math.cpp  Matrix2x3f.cpp  Quaternion.cpp  Transform.cpp  Vector2f.cpp  Vector3f.cpp
Code/Source/Universal/Math/Matrix/: Matrix2x3f.cpp  Matrix3x3f.cpp  Matrix3x4f.cpp  Matrix4x4f.cpp
Code/Source/Universal/Math/Random/: Generator.cpp
Code/Source/Universal/Math/Vector/: Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
Code/Source/Universal/Profiling/: TimeRegistry.cpp  Timer.cpp
Code/Source/Universal/System/: Clock.cpp
Code/Tests/: CMakeLists.txt
Code/Tests/Universal/Algorithm/Noise/: FloatMap2DTest.cpp  PerlinNoiseGenerator2DTest.cpp  VectorGrid2DTest.cpp
Code/Tests/Universal/Graphics/: BitmapTest.cpp  BufferTest.cpp  ColorPaletteTest.cpp  ColorTest.cpp
Code/Tests/Universal/Math/: Aabb2DTest.cpp  BoundingBox2DTest.cpp  MathTest.cpp  Matrix2x3fTest.cpp  QuaternionTest.cpp  TransformTest.cpp  Vector2fTest.cpp  Vector3fTest.cpp
Code/Tests/Universal/Math/Matrix/: Matrix2x3fTest.cpp  Matrix3x3fTest.cpp  Matrix3x4fTest.cpp
Code/Tests/Universal/Math/Random/: Generator.cpp
Code/Tests/Universal/Math/Vector/: Vector2fTest.cpp  Vector3fTest.cpp  Vector4Test.cpp
Code/Tests/Universal/System/: ClockTest.cpp
assets/: universalis-42.hex
include/Math/: BoundingBox2D.h  Math.h  Random.h  Vector2.h  Vector3.h
include/Profiling/: TimeRegistry.h  Timer.h
python/tools/: time_registry_plotter.py
src/Math/: BoundingBox2D.cpp  Math.cpp  Random.cpp  Vector2.cpp  Vector3.cpp
src/Profiling/: TimeRegistry.cpp  Timer.cpp
